fix: book page layout alignment

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -539,23 +539,25 @@ figcaption {
   }
 
   .book.columns {
-    width: 25em;
+    width: 50%;
     margin: 0;
+    @include mobile {
+      width: 100%;
+    }
     .column {
-      padding: 0.75em 0.75em 0.75em 0;
+      padding: 1% 5% 1% 0;
     }
     h3 {
       color: $secondary-dark;
     }
     a {
       img {
-        object-fit: cover;
-        height: 17em;
-        width: 14em;
+        height: auto;
+        width: 18em;
       }
       &:hover {
         img {
-          border: 3px solid $primary-dark;
+          border: 1px solid $primary-dark;
         }
       }
     }
